2004-06-07  Ted Gould  <ted@gould.cx>

	* src/inkscape.cpp, src/main.cpp:

	Moving the initialization of the extensions into the Inkscape application
	init.  I have mixed feelings on this.  One one hand, basically extension
	init gets called directly after applicaiton init and extensions init has
	nothing to do with anything else in main.  On the other hand I'm not sure
	that it is directly related to the structure of the application itself.
	Comments are welcome.

2004-06-06  MenTaLguY  <mental@rydia.net>

	* src/attributes.cpp, src/attributes.h: added inkscape:collect attribute
	  to specify orphan collection policy (collect with parent, or always
	  collect)

	* src/document-undo.cpp, src/document.cpp, src/document.h: added an orphan
	  collection pass as part of comitting an undo step
	  
	* src/sp-object.cpp, src/sp-object.h:
	  add total hrefcount for all descendants, and basic orphan collection
	  facilities

	* src/gradient-chemistry.cpp, src/dialogs/stroke-style.cpp,
	  src/extension/internal/gdkpixbuf-input.cpp:
	  mark automatically added gradients, patterns, and markers for orphan
	  collection

2004-06-06  Bryce Harrington <bryce@bryceharrington.com>

	* libnrtype/nr-type-xft.cpp, libnrtype/nr-font.cpp,
  	  libnrtype/nr-rasterfont.cpp, libnrtype/nr-type-directory.cpp,
	  libnrtype/nr-typeface.cpp, libnrtype/nr-type-w32.cpp, 
	  libnrtype/nr-type-ft2.cpp, libnrtype/nr-type-pos-def.cpp,
	  libnrtype/nr-type-primitives.cpp:

	Documenting the routines.  This adds basic code docs for
	everything in libnrtype.  

2004-06-06  Ted Gould  <ted@gould.cx>

	* src/main.cpp, src/preferences-skeleton.h, src/extension/extension.cpp:

	Making it so that the extension parameters get saved in the Inkscape
	preferences.  Most people will notice that their printer gets saved now.
	But this does alot more than that.  Added an "extensions" group to the
	preferences skeleton for all these settings.  All settings get saved as