@@ -1,3 +1,9 @@
+2004-06-07  Carl Hetherington <inkscape@carlh.net>
+
+	* src/main.cpp: tentative fix for startup crash on Win32.  Ensure
+	that Extension::Internal::PrintWin32::init() is not called until
+	after inkscape_application_init().
+
 2004-06-07  Ted Gould  <ted@gould.cx>
 
 	* src/inkscape.cpp, src/main.cpp:
